feat: add summary

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <h1>palina hramuzava</h1>
         <div class="title-summary"><p>Objective:</p></div>
         <p>to build accessible, high-performance webpages using innovative web strategies and standarts.</p>
+        <div class="title-summary"><p>Summary:</p></div>
+        <ul>
+            <li>Experience working in HTML5, CSS3, JS, SQL, PHP.</li>
+            <li>Strong understanding of UI, cross-browser compatibility, general web functions and standarts.</li>
+            <li>Proactive communicator who can collaborate with other team-members to ensure successful completion of shared tasks.</li>
+        </ul>
     </div>
    </section> 
    <section></section> 
