feat: add contacts

--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
             <li>Strong understanding of UI, cross-browser compatibility, general web functions and standarts.</li>
             <li>Proactive communicator who can collaborate with other team-members to ensure successful completion of shared tasks.</li>
         </ul>
+        <div class="contacts">
+            <ul>
+                <li><img src="assets/location.png" alt="location"> Belarus, Minsk 220131</li>
+                <li><img src="assets/call.png" alt="call">+375 44 7100768</li>
+                <li><img src="assets/email.png" alt="email">palinahramuzava@gmail.com</li>
+            </ul>
+        </div>
     </div>
    </section> 
-   <section></section> 
+   <section class="experience-container">
+
+   </section> 
 </body>
 </html>
