feat: add experience, education

--- a/index.html
+++ b/index.html
@@ -28,13 +28,46 @@
             <ul>
                 <li><img src="assets/location.png" alt="location"> Belarus, Minsk 220131</li>
                 <li><img src="assets/call.png" alt="call">+375 44 7100768</li>
-                <li><img src="assets/email.png" alt="email">palinahramuzava@gmail.com</li>
+                <li><img src="assets/email.png" alt="email">polinagramuzova@gmail.com</li>
             </ul>
         </div>
     </div>
    </section> 
    <section class="experience-container">
-
+        <div class="experience">
+                <div class="title-experience"><p>Experience:</p></div>
+                <hr>
+                <article>
+                    <p class="company"><em>Freelance web developer</em>, based in Minsk, (volunteering),</p>
+                    <p class="date"> 2017- present</p>
+                    <ul class="description">
+                        <li>Code and modify websites, from layout to function and according to a client`s specifications.</li>
+                    <li>Integrate data from various back-end services and databases</li>
+                    <li>Analyzes tasks, provides work estimates, and manages own time to keep development on shedule</li>
+                    <li>Negotiate with clients for appearing their requirements</li></ul>
+                </article>
+                <article>
+                    <p class="company"><em>Custumer Care Expert</em>, Telecom Austria Group (Velcom), </p>
+                    <p class="date"> 2013-2017</p>
+                    <ul class="description"><li>work with customers to develop a solution to their problem</li>
+                    <li>deal with difficult people</li>
+                    <li>take the team leaders role in managing conflict</li></ul>
+                </article>
+                <article>
+                    <p class="company"><em>Marketer</em>, Институт “Кадры Индустрии”, Minsk,</p>
+                    <p class="date">2011-2013</p>
+                    <ul class="description"><li>Support a comprehensive customer engagement model through development and implementation of integrated multichannel campaigns.</li>
+                    <li>Develop annual budget required to support tactical plan and manage Multichannel marketing budget.</li></ul>
+                </article>
+        </div>
+        <div class="education">
+            <div class="title-education"><p>Education:</p></div>
+        <hr>
+        <ul>
+            <li><img src="assets/mortarboard.png" alt="icon-education">AS in web-developing,<br> BSUIR, Minsk, 2017</li>
+            <li><img src="assets/mortarboard.png" alt="icon-education">BS in ecology,<br> ISEU, Minsk, 2013</li>
+        </ul>
+    </div>
    </section> 
 </body>
 </html>
