fix: fix html format, add skills

--- a/index.html
+++ b/index.html
@@ -1,73 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>"HTML, CSS & Git Basics"</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   <header>
-      
-           <img src="assets/avatar.png" alt="avatar">
-        
-   </header>
-   <section class="summary">
-    <div class="name-info">
-        <h1>palina hramuzava</h1>
-        <div class="title-summary"><p>Objective:</p></div>
-        <p>to build accessible, high-performance webpages using innovative web strategies and standarts.</p>
-        <div class="title-summary"><p>Summary:</p></div>
-        <ul>
-            <li>Experience working in HTML5, CSS3, JS, SQL, PHP.</li>
-            <li>Strong understanding of UI, cross-browser compatibility, general web functions and standarts.</li>
-            <li>Proactive communicator who can collaborate with other team-members to ensure successful completion of shared tasks.</li>
-        </ul>
-        <div class="contacts">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>"HTML, CSS & Git Basics"</title>
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+      <header>
+         <img src="assets/avatar.png" alt="avatar">
+      </header>
+      <section class="summary">
+         <div class="name-info">
+            <h1>palina hramuzava</h1>
+            <div class="title-summary">
+               <p>Objective:</p>
+            </div>
+            <p>to build accessible, high-performance webpages using innovative web strategies and standarts.</p>
+            <div class="title-summary">
+               <p>Summary:</p>
+            </div>
             <ul>
-                <li><img src="assets/location.png" alt="location"> Belarus, Minsk 220131</li>
-                <li><img src="assets/call.png" alt="call">+375 44 7100768</li>
-                <li><img src="assets/email.png" alt="email">polinagramuzova@gmail.com</li>
+               <li>Experience working in HTML5, CSS3, JS, SQL, PHP.</li>
+               <li>Strong understanding of UI, cross-browser compatibility, general web functions and standarts.</li>
+               <li>Proactive communicator who can collaborate with other team-members to ensure successful completion of shared tasks.</li>
             </ul>
-        </div>
-    </div>
-   </section> 
-   <section class="experience-container">
-        <div class="experience">
-                <div class="title-experience"><p>Experience:</p></div>
-                <hr>
-                <article>
-                    <p class="company"><em>Freelance web developer</em>, based in Minsk, (volunteering),</p>
-                    <p class="date"> 2017- present</p>
-                    <ul class="description">
-                        <li>Code and modify websites, from layout to function and according to a client`s specifications.</li>
-                    <li>Integrate data from various back-end services and databases</li>
-                    <li>Analyzes tasks, provides work estimates, and manages own time to keep development on shedule</li>
-                    <li>Negotiate with clients for appearing their requirements</li></ul>
-                </article>
-                <article>
-                    <p class="company"><em>Custumer Care Expert</em>, Telecom Austria Group (Velcom), </p>
-                    <p class="date"> 2013-2017</p>
-                    <ul class="description"><li>work with customers to develop a solution to their problem</li>
-                    <li>deal with difficult people</li>
-                    <li>take the team leaders role in managing conflict</li></ul>
-                </article>
-                <article>
-                    <p class="company"><em>Marketer</em>, Институт “Кадры Индустрии”, Minsk,</p>
-                    <p class="date">2011-2013</p>
-                    <ul class="description"><li>Support a comprehensive customer engagement model through development and implementation of integrated multichannel campaigns.</li>
-                    <li>Develop annual budget required to support tactical plan and manage Multichannel marketing budget.</li></ul>
-                </article>
-        </div>
-        <div class="education">
-            <div class="title-education"><p>Education:</p></div>
-        <hr>
-        <ul>
-            <li><img src="assets/mortarboard.png" alt="icon-education">AS in web-developing,<br> BSUIR, Minsk, 2017</li>
-            <li><img src="assets/mortarboard.png" alt="icon-education">BS in ecology,<br> ISEU, Minsk, 2013</li>
-        </ul>
-    </div>
-   </section> 
-</body>
+            <div class="contacts">
+               <ul>
+                  <li><img src="assets/location.png" alt="location"> Belarus, Minsk 220131</li>
+                  <li><img src="assets/call.png" alt="call">+375 44 7100768</li>
+                  <li><img src="assets/email.png" alt="email">polinagramuzova@gmail.com</li>
+               </ul>
+            </div>
+         </div>
+      </section>
+      <section class="experience-container">
+         <div class="experience">
+            <div class="title-experience">
+               <p>Experience:</p>
+            </div>
+            <hr>
+            <article>
+               <p class="company"><strong>Freelance web developer</strong>, based in Minsk, (volunteering),</p>
+               <p class="date"> 2017- present</p>
+               <ul class="description">
+                  <li>Code and modify websites, from layout to function and according to a client`s specifications.</li>
+                  <li>Integrate data from various back-end services and databases</li>
+                  <li>Analyzes tasks, provides work estimates, and manages own time to keep development on shedule</li>
+                  <li>Negotiate with clients for appearing their requirements</li>
+               </ul>
+            </article>
+            <article>
+               <p class="company"><strong>Custumer Care Expert</strong>, Telecom Austria Group (Velcom), </p>
+               <p class="date"> 2013-2017</p>
+               <ul class="description">
+                  <li>work with customers to develop a solution to their problem</li>
+                  <li>deal with difficult people</li>
+                  <li>take the team leaders role in managing conflict</li>
+               </ul>
+            </article>
+            <article>
+               <p class="company"><strong>Marketer</strong>, Институт “Кадры Индустрии”, Minsk,</p>
+               <p class="date">2011-2013</p>
+               <ul class="description">
+                  <li>Support a comprehensive customer engagement model through development and implementation of integrated multichannel campaigns.</li>
+                  <li>Develop annual budget required to support tactical plan and manage Multichannel marketing budget.</li>
+               </ul>
+            </article>
+         </div>
+         <div class="education">
+            <div class="title-education">
+               <p>Education:</p>
+            </div>
+            <hr>
+            <ul>
+               <li><img src="assets/mortarboard.png" alt="icon-education">AS in web-developing,<br> BSUIR, Minsk, 2017</li>
+               <li><img src="assets/mortarboard.png" alt="icon-education">BS in ecology,<br> ISEU, Minsk, 2013</li>
+            </ul>
+            <div class="title-education">
+               <p>Skills</p>
+            </div>
+            <hr>
+            <ul>
+               <li>HTML</li>
+               <li>CSS</li>
+               <li>Photoshop</li>
+               <li>MySQL</li>
+               <li>JavaScript</li>
+               <li>PHP</li>
+               <li>CorelDraw</li>
+            </ul>
+         </div>
+      </section>
+   </body>
 </html>
